# clashrs

./: .gitignore  COPYRIGHT  README.md  class.rs  inline_rust.clsh  solver_strongly_typed.clsh
clashc/: Cargo.toml
clashc/Lexer/: io.rs  mod.rs  peg.rs
clashc/ex/: hello_clash_world.clsh  hello_clash_world.pest
clashc/src/: lexer.rs  lib.rs
clashc/src/lexer/: mod.rs
clashrs/: Cargo.toml
clashrs/tests/: domain.rs
clasp/nonstd/abstract/: Argument.clap  Array.clap  Awaitable.clap  Bool.clap  Callable.clap  Char.clap  Command.clap  Comprehension.clap  Dict.clap  Enum.clap  Error.clap  Expression.clap  Float.clap  Function.clap  Future.clap  Generator.clap  Global.clap  Id.clap  Int.clap  Interface.clap  Lambda.clap  List.clap  Local.clap  Operator.clap  Pointer.clap  RawPointer.clap  Reference.clap  Resolvable.clap  Slice.clap  String.clap  Thing.clap  Tuple.clap  UnsignedInt.clap
design/: agent.clsh  inline_c.clsh.rs  inline_python.clsh  macro_system.clsh.rs  solver_classes.clsh
rsclasp/src/claspc/: mod.rs
rsclasp/src/libdomain/: mod.rs
rsclasp/src/libenv/: env.rs
rsclasp/src/liblex/: mod.rs
rsclasp/src/libscope/: mod.rs
rsclasp/src/libshell/: completions.rs
rsclasp/tests/: claspc.rs
src/: lib.rs
src/claspc/: claspc.rs
src/libenv/: env.rs  lib.rs
src/liblex/: clash.pest
src/libshell/: lib.rs  mod.rs
src/libstd/: mod.rs
src/libsystem/: mod.rs
