[package]
name = "clashc"
version = "0.1.0"
authors = ["David Golembiowski <dmgolembiowski@gmail.com>", "David Golembiowski <david@clash-language.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test-case = "1.0.0"
pest = "2.1.3"
pest_derive = "2.1.0"

