[package]
name = "clasp"
description = "Clasp, the command line agnostic software programming language, aims to bridge the gap between software engineering and system administration. Clasp's design hybridridizes a general purpose programming language with the scripting capabilities of a standard command line."
version = "0.1.0"
authors = ["David Golembiowski <david@clasp-lang.org>"]
edition = "2018"

[dependencies]
